docs/assets/css/home.css
/* ... */
@media (min-width: 1200px) {
  .home > section.mission-statement .statement {
    width: min(630px, 45vw);
    padding: 50px;
    border-radius: 30px;
  }
}
.home > section.mission-statement .statement p {
  font-weight: bold;
  font-size: 1.1rem;
  line-height: 1.3;
  letter-spacing: 0.01em;
  color: #000000;
}
.home > section.mission-statement .statement p .november-font {
  font-family: "november";
}
@media (min-width: 768px) {
  .home > section.mission-statement .statement p {
    font-size: 1.3rem;
  }
}
@media (min-width: 1200px) {
  .home > section.mission-statement .statement p {
    font-size: 1.8rem;
  }
}

.home > section.tools {
  background: #f7f7f7;
  position: relative;
  border-radius: 30px;
  padding-top: 30px;
  padding-inline: 24px;
  padding: 30px 24px 50px;
  text-align: center;
}
@media (min-width: 768px) {
  .home > section.tools {
    padding: 50px 60px 80px;
  }
}
@media (min-width: 1200px) {
  .home > section.tools {
    padding: 80px 75px 130px;
  }
}
.home > section.tools ul {
  margin-top: 1rem;
}
@media (min-width: 768px) {
  .home > section.tools ul {
    margin-top: 90px;
  }
}
.home > section.tools ul li {
  padding: 20px 0px;
  border-bottom: 1px solid #000000;
}
.home > section.tools ul li a {
  display: flex;
  color: inherit;
  justify-content: space-between;
  align-items: center;
  text-decoration: none;
}
.home > section.tools ul li a h3 {
  font-weight: bold;
  font-size: 1.5rem;
  line-height: 1.4;
  text-align: left;
}
@media (min-width: 768px) {
  .home > section.tools ul li a h3 {
    font-size: 2.1rem;
  }
}
@media (min-width: 1200px) {
  .home > section.tools ul li a h3 {
    font-size: 3.2rem;
  }
}
.home > section.tools ul li a .arrow-circle {
  background: #2154d6;
  color: #f7f7f7;
  height: 50px;
  width: 50px;
  border: none;
  border-radius: 50%;
  overflow: hidden;
  position: relative;
}
@media (min-width: 768px) {
  .home > section.tools ul li a .arrow-circle {
    height: 75px;
    width: 75px;
  }
  .home > section.tools ul li a .arrow-circle svg {
    width: 28px;
    height: auto;
  }
}
@media (min-width: 1200px) {
  .home > section.tools ul li a .arrow-circle {
    height: 100px;
    width: 100px;
  }
  .home > section.tools ul li a .arrow-circle svg {
    width: 35px;
    height: auto;
  }
}
.home > section.tools ul li a .arrow-circle .animated-arrow {
  position: relative;
  width: 200%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: space-around;
}
.home > section.tools ul li a:hover {
  color: #8e8e8e;
}
.home > section.tools ul li a:hover .animated-arrow {
  -webkit-animation: slideArrows 0.75s forwards;
  animation: slideArrows 0.75s forwards;
  animation-iteration-count: 1;
}
@media (prefers-reduced-motion: reduce) {
  .home > section.tools ul li a:hover .animated-arrow {
    -webkit-animation: none;
    animation: none;
  }
}
@-webkit-keyframes slideArrows {
  0% {
    transform: translateX(-50%);
  }
  100% {
    transform: translateX(0);
  }
}
@keyframes slideArrows {
  0% {
    transform: translateX(-50%);
  }
  100% {
    transform: translateX(0);
  }
}
.home > section.tools ul li:nth-child(even) .arrow-circle {
  background: #f1de00;
  color: blacK;
}

.home > section.current-team {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 60px;
}
@media (min-width: 768px) {
  .home > section.current-team {
    gap: 120px;
  }
}
.home > section.current-team h2 {
  color: #f1de00;
}
.home > section.current-team ul {
  color: #f7f7f7;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  max-width: 100%;
  list-style: none;
  gap: 20px;
}
@media (min-width: 768px) {
  .home > section.current-team ul {
    gap: 40px;
  }
}
.home > section.current-team ul li {
  display: block;
  text-align: center;
}
.home > section.current-team ul li img {
  border-radius: 50%;
  object-fit: cover;
  width: 170px;
  height: 170px;
}
.home > section.current-team ul li h3 {
  font-weight: bold;
}

.home > section.latest-news h2 {
  color: #f1de00;
}
.home > section.latest-news .post-list {
  margin: 80px auto;
}
.home > section.latest-news .button-group {
  margin: 0 auto;
}

